# pyexp

./: README.md  mypy.ini  pyproject.toml
autocomplete/: _comp_pyexp.sh
pyexp/: cmd_handler.py  experiment.py  main.py  manager.py
